--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Influncer Gear</title>
     <link rel="shortcut icon" href="/images/airpod.png" type="image/x-icon">
     <!-- stylesheet -->
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/88a3418145.js" crossorigin="anonymous"></script>
     <!-- fonts -->
