--- a/index.html
+++ b/index.html
@@ -46,33 +46,33 @@
                             class="fa-solid fa-arrow-right"></i></a>
                 </div>
                 <div class="header-img">
-                    <img src="/images/main-camera.png" alt="">
+                    <img src="images/main-camera.png" alt="">
                 </div>
             </section>
             <section class="partners">
                 <div class="partner-img">
-                    <img src="/logos/Alibaba.svg" alt="">
+                    <img src="logos/Alibaba.svg" alt="">
                 </div>
                 <div class="partner-img">
-                    <img src="/logos/Amazon.svg" alt="">
+                    <img src="logos/Amazon.svg" alt="">
                 </div>
                 <div class="partner-img">
-                    <img src="/logos/Daraz.pk Logo.svg" alt="">
+                    <img src="logos/Daraz.pk Logo.svg" alt="">
                 </div>
                 <div class="partner-img">
-                    <img src="/logos/Ebay.svg" alt="">
+                    <img src="logos/Ebay.svg" alt="">
                 </div>
                 <div class="partner-img">
-                    <img src="/logos/Rakuten.svg" alt="">
+                    <img src="logos/Rakuten.svg" alt="">
                 </div>
                 <div class="partner-img">
-                    <img src="/logos/Target.svg" alt="">
+                    <img src="logos/Target.svg" alt="">
                 </div>
                 <div class="partner-img">
-                    <img src="/logos/Walmart.svg" alt="">
+                    <img src="logos/Walmart.svg" alt="">
                 </div>
                 <div class="partner-img">
-                    <img src="/logos/Alibaba.svg" alt="">
+                    <img src="logos/Alibaba.svg" alt="">
                 </div>
             </section>
         </header>
@@ -83,7 +83,7 @@
                 <div class="collections">
                     <div class="collection">
                         <div class="collection-img">
-                            <img src="/images/tripod.png" alt="">
+                            <img src="images/tripod.png" alt="">
                         </div>
                         <div class="collection-deatil">
                             <h1 class="collection-title">Flex Tripod</h1>
@@ -102,7 +102,7 @@
                     </div>
                     <div class="collection">
                         <div class="collection-img">
-                            <img src="/images/mic.png" alt="">
+                            <img src="images/mic.png" alt="">
                         </div>
                         <div class="collection-deatil">
                             <h1 class="collection-title">Flex Tripod</h1>
@@ -113,7 +113,7 @@
                     </div>
                     <div class="collection">
                         <div class="collection-img">
-                            <img src="/images/airpod.png" alt="">
+                            <img src="images/airpod.png" alt="">
                         </div>
                         <div class="collection-deatil">
                             <h1 class="collection-title">Flex Tripod</h1>
@@ -124,7 +124,7 @@
                     </div>
                     <div class="collection">
                         <div class="collection-img">
-                            <img src="/images/drone.png" alt="">
+                            <img src="images/drone.png" alt="">
                         </div>
                         <div class="collection-deatil">
                             <h1 class="collection-title">Flex Tripod</h1>
@@ -135,7 +135,7 @@
                     </div>
                     <div class="collection">
                         <div class="collection-img">
-                            <img src="/images/lights.png" alt="">
+                            <img src="images/lights.png" alt="">
                         </div>
                         <div class="collection-deatil">
                             <h1 class="collection-title">Flex Tripod</h1>
@@ -146,7 +146,7 @@
                     </div>
                     <div class="collection">
                         <div class="collection-img">
-                            <img src="/images/setup.png" alt="">
+                            <img src="images/setup.png" alt="">
                         </div>
                         <div class="collection-deatil">
                             <h1 class="collection-title">Flex Tripod</h1>
@@ -157,7 +157,7 @@
                     </div>
                     <div class="collection">
                         <div class="collection-img">
-                            <img src="/images/camera.png" alt="">
+                            <img src="images/camera.png" alt="">
                         </div>
                         <div class="collection-deatil">
                             <h1 class="collection-title">Flex Tripod</h1>
@@ -168,7 +168,7 @@
                     </div>
                     <div class="collection">
                         <div class="collection-img">
-                            <img src="/images/single-light.png" alt="">
+                            <img src="images/single-light.png" alt="">
                         </div>
                         <div class="collection-deatil">
                             <h1 class="collection-title">Flex Tripod</h1>
@@ -179,7 +179,7 @@
                     </div>
                     <div class="collection">
                         <div class="collection-img">
-                            <img src="/images/action.png" alt="">
+                            <img src="images/action.png" alt="">
                         </div>
                         <div class="collection-deatil">
                             <h1 class="collection-title">Flex Tripod</h1>
@@ -194,7 +194,7 @@
             <!----------------------------------- featured products ------------------------ -->
             <section class="featured-products">
                 <div class="featured-img">
-                    <img src="/images/gear.png" alt="">
+                    <img src="images/gear.png" alt="">
                 </div>
                 <div class="featured-deatil">
                     <h1 class="featured-title">Featured products at one place</h1>
