--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                     <img src="images/main-camera.png" alt="">
                 </div>
             </section>
+            <!--------------------------------- partners ----------------------------- -->
             <section class="partners">
                 <div class="partner-img">
                     <img src="logos/Alibaba.svg" alt="">
@@ -88,14 +89,14 @@
                         <div class="collection-deatil">
                             <h1 class="collection-title">Flex Tripod</h1>
                             <p class="price">$50.99</p>
-                            <!-- <p class="rating-icons">
+                            <p class="rating-icons">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star-half-stroke"></i>
                                 <span>4.99</span>
-                            </p> -->
+                            </p>
                             <p class="collection-info">Wordwide shifting <br> available <br>
                                 Buyers protection possible!</p>
                         </div>
@@ -105,8 +106,16 @@
                             <img src="images/mic.png" alt="">
                         </div>
                         <div class="collection-deatil">
-                            <h1 class="collection-title">Flex Tripod</h1>
+                            <h1 class="collection-title">Microphone</h1>
                             <p class="price">$50.99</p>
+                            <p class="rating-icons">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span>4.99</span>
+                            </p>
                             <p class="collection-info">Wordwide shifting <br> available <br>
                                 Buyers protection possible!</p>
                         </div>
@@ -118,6 +127,14 @@
                         <div class="collection-deatil">
                             <h1 class="collection-title">Flex Tripod</h1>
                             <p class="price">$50.99</p>
+                            <p class="rating-icons">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span>4.99</span>
+                            </p>
                             <p class="collection-info">Wordwide shifting <br> available <br>
                                 Buyers protection possible!</p>
                         </div>
@@ -129,6 +146,14 @@
                         <div class="collection-deatil">
                             <h1 class="collection-title">Flex Tripod</h1>
                             <p class="price">$50.99</p>
+                            <p class="rating-icons">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span>4.99</span>
+                            </p>
                             <p class="collection-info">Wordwide shifting <br> available <br>
                                 Buyers protection possible!</p>
                         </div>
@@ -140,6 +165,14 @@
                         <div class="collection-deatil">
                             <h1 class="collection-title">Flex Tripod</h1>
                             <p class="price">$50.99</p>
+                            <p class="rating-icons">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span>4.99</span>
+                            </p>
                             <p class="collection-info">Wordwide shifting <br> available <br>
                                 Buyers protection possible!</p>
                         </div>
@@ -151,6 +184,14 @@
                         <div class="collection-deatil">
                             <h1 class="collection-title">Flex Tripod</h1>
                             <p class="price">$50.99</p>
+                            <p class="rating-icons">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span>4.99</span>
+                            </p>
                             <p class="collection-info">Wordwide shifting <br> available <br>
                                 Buyers protection possible!</p>
                         </div>
@@ -162,6 +203,14 @@
                         <div class="collection-deatil">
                             <h1 class="collection-title">Flex Tripod</h1>
                             <p class="price">$50.99</p>
+                            <p class="rating-icons">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span>4.99</span>
+                            </p>
                             <p class="collection-info">Wordwide shifting <br> available <br>
                                 Buyers protection possible!</p>
                         </div>
@@ -173,6 +222,14 @@
                         <div class="collection-deatil">
                             <h1 class="collection-title">Flex Tripod</h1>
                             <p class="price">$50.99</p>
+                            <p class="rating-icons">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span>4.99</span>
+                            </p>
                             <p class="collection-info">Wordwide shifting <br> available <br>
                                 Buyers protection possible!</p>
                         </div>
@@ -184,6 +241,14 @@
                         <div class="collection-deatil">
                             <h1 class="collection-title">Flex Tripod</h1>
                             <p class="price">$50.99</p>
+                            <p class="rating-icons">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span>4.99</span>
+                            </p>
                             <p class="collection-info">Wordwide shifting <br> available <br>
                                 Buyers protection possible!</p>
                         </div>
@@ -202,7 +267,8 @@
                         Velit
                         officia consequat
                         duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                    <a class="button" href="">Join Now<i style="color:white ;" class="fa-solid fa-arrow-right"></i> </a>
+                    <a class="button" href="">Join Now <i style="color:white ;" class="fa-solid fa-arrow-right"></i>
+                    </a>
                 </div>
             </section>
         </main>
